--- a/style.css
+++ b/style.css
@@ -33,11 +33,11 @@ logo{
 
 #c{
     margin-top:25px;
-    color:#ff004f;
-    font-size: 60px;
+    color:hwb(0 2% 3%);
+    font-size: 65px;
     padding:0;
     margin-right:0;
-    text-shadow: -3px -3px 9px red;
+    text-shadow: -2px -2px 10px rgb(11, 11, 11);
 }
 
 #remain{
@@ -80,6 +80,16 @@ nav ul li a:hover::after{
     margin-top:20%;
     font-size:30px;
 }
+.header-text p{
+    overflow:hidden;
+    width:0;
+    animation: typing 15s forwards;
+}
+
+@keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+}
 
 .header-text h1{
     font-size: 60px;
@@ -93,7 +103,7 @@ nav ul li a:hover::after{
 /* -------------ABout------------------ */
 #about{
     padding:88px 0;
-    color:rgb(167, 205, 238);
+    color:rgb(244, 247, 241);
 }
 
 .row{
@@ -124,12 +134,22 @@ nav ul li a:hover::after{
     display:flex;
     margin:20px 0 40px;
 }
+
 .tab-links{
     margin-right:50px;
+    background-color: #0d0e0d;
+    border:2px solid rgb(250, 246, 246);
+    padding:1px 3px;
+    border-radius: 17px;
+    color: #f5f2f2;
     font-weight: 500px;
     font-size:18px;
     cursor:pointer;
     position:relative;
+}
+.tab-links:hover{
+    background-color: #f6f8f6;
+    color: #0b0b0b;
 }
 .tab-links::after{
     content:'';
@@ -151,7 +171,8 @@ nav ul li a:hover::after{
 }
 
 .tab-contents ul li span{
-    color:#dc6f92;
+    font-weight: bold;
+    color:#49eae7;
     font-size: 14px;
 }
 
@@ -162,6 +183,7 @@ nav ul li a:hover::after{
 .tab-contents.active-tab{
     display:block;
 }
+
 
 /* <!-- .................SERVICES.........................  -->  */
 
