initial change done for Adding projects

--- a/style.css
+++ b/style.css
@@ -476,3 +476,9 @@ nav .fa-solid{
 .services-list .a{
     padding: 10px;
 }
+
+.container .p{
+    background-color: #ababab;
+    padding: 2rem;
+    margin: 1rem;
+}
