--- a/style.css
+++ b/style.css
@@ -231,7 +231,7 @@ nav ul li a:hover::after{
 /* ...............portfolio...........  */
 #portfolio{
     padding:50px 0;
-    padding-bottom: 0;
+    /* padding-bottom: 0; */
 }
 
 .work-list{
